--- a/study_code/a_project_dalkomm/src/style/common/_variable.scss
+++ b/study_code/a_project_dalkomm/src/style/common/_variable.scss
@@ -6,3 +6,5 @@ $color_black: #1c1c1c;
 $color_primary: #ff592e;
 $color_deep_gray: #707070;
 $color_blue: #2a31a0;
+$color_cobalt: #1b4793;
+$color_tomato: #eb5c2a;
