--- a/study_code/a_project_dalkomm/src/style/section.scss
+++ b/study_code/a_project_dalkomm/src/style/section.scss
@@ -88,7 +88,11 @@
   position: relative;
   width: 100%; height: 1080px;
   padding: 200px 0;
+}
 
+.view_03_text_wrap {
+  width: auto; height: auto;
+  margin: auto;
   h2 {
     width: auto; height: auto;
     margin: auto; margin-bottom: 40px;
@@ -103,10 +107,46 @@
     font-weight: 700;
     color: $color_blue;
   }
+}
 
-  .view_03_bg {
-    position: absolute; bottom: 0; left: 0; right: 0;
-    width: 100%; height: 490px;
-    @include img('bg_dal_story.svg', $size: cover)
+.view_03_bg {
+  position: absolute; bottom: 0; left: 0; right: 0;
+  width: 100%; height: 490px;
+  @include img('bg_dal_story.svg', $size: cover)
+}
+
+// .view_03 ===============================================================
+
+.view_07 {
+  width: 100%; height: 800px; 
+  padding: 170px;
+  background-color: $color_cobalt;
+  @include img('bg_supporter.png', $size: cover)
+} 
+
+.view_07_text_wrap {
+  width: auto; height: auto;
+  margin: auto; margin-bottom: 80px;
+  h2 {
+    margin: auto; margin-bottom: 40px;
+    font-size: 4.167vw; // 1440기준 60px
+    font-weight: 700;
+    color: $color_white;
   }
-} // .view_03 ===============================================================
+  p {
+    margin: auto;
+    font-size: 1.8vw; // 1440기준 26px
+    font-weight: 400;
+    color: $color_white;
+  }
+} // .view_07_text_wrap
+
+.franchisee {
+  width: 280px; height: 70px;
+  border-radius: 8px;
+  background-color: $color_tomato;
+  font-size: 20px;
+  line-height: 70px;
+  color: $color_white;
+}
+// .view_07 ===============================================================
