--- a/study_code/a_project_dalkomm/src/style/section.scss
+++ b/study_code/a_project_dalkomm/src/style/section.scss
@@ -117,6 +117,36 @@
 
 // .view_03 ===============================================================
 
+.view_04 {
+  position: relative; z-index: 1;
+  width: 100%; height: 1080px;
+  overflow: hidden;
+} // .view_04
+
+.view_04_text_wrap {
+  position: absolute; 
+  width: 100%; height: auto;
+  margin: auto;
+  padding: 120px;
+  color: $color_primary;
+  h2 {
+    margin-bottom: 40px;
+    font-size: 4.51vw; // 1440기준 65px
+  }
+  p {
+    font-size: 20px;
+  }
+}
+
+.view_04_rectangle {
+  position: absolute; z-index: -1;
+  top: 200px; left: -200px;
+  width: 520px; height: 350px;
+  @include img('img_play_01.jpg', $size: cover)
+}
+
+// .view_04 ================================================================
+
 .view_07 {
   width: 100%; height: 800px; 
   padding: 170px;
