--- a/study_code/a_project_dalkomm/src/style/section.scss
+++ b/study_code/a_project_dalkomm/src/style/section.scss
@@ -4,6 +4,35 @@
 @import './common/variable';
 @import './common/mixin';
 
+@keyframes slideUp {
+  from{
+    top: 400px;
+    opacity: 0;
+  }
+  to{
+    top: 200px;
+    opacity: 1;
+  }
+}
+@keyframes slideDown {
+  from{
+    top: 200px;
+    opacity: 1;
+  }
+  to{
+    top: 600px;
+    opacity: 0;
+  }
+}
+
+.text_slide_up {
+  animation: slideUp 1s ease-out forwards;
+}
+.text_slide_down {
+  animation: slideDown 1s ease-out forwards;
+}
+
+// -----------------------------------------------------------------------
 #viewBox {
   width: 100%; max-width: 1920px; height: auto;
   background-color: #fbf4e4;
@@ -50,11 +79,13 @@
 .view_02 {
   position: relative;
   width: 100%; height: 1176px;
+  margin-top: 200px;
 
   // text뒤로 사진이 가기 위해 position 사용
   .view_02_text_wrap {
     position: absolute; z-index: 10; top: 200px; left: 0; right: 0;
     margin: auto;
+    // animation: slideUp 1s ease-out;
   }
   h2 {
     font-size: 36px;
@@ -71,7 +102,7 @@
   
 
   .circle_01 {
-    position: absolute; top: 0; right: 0;
+    position: absolute; top: 0; right: -200px;
     width: 419px; height: 424px;
     @include img('circle_img.png');
   }
