[modify] saleBox 스크롤 삭제, awards부분 색상 변경

--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -66,7 +66,8 @@ html, body {
   #headBox {
     height: 19.5vw;
     max-height: 150px;
-    padding: 3.9vw 10vw;
+    padding: 3.9vw 9vw;
+    overflow: hidden;
   }
 
   h1 {
