--- a/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
@@ -53,12 +53,16 @@
       &:nth-child(1)::after {
         content: ""; display: block;
         width: 100%; height: 100%;
-        background-color: rgba($color_black, 0.5);
+        border-radius: 0.25rem;
+
+        background-color: rgba($color_black, 0.3);
       }
       &:nth-child(4)::after {
         content: ""; display: block;
         width: 100%; height: 100%;
-        background-color: rgba($color_black, 0.5);
+        border-radius: 0.25rem;
+
+        background-color: rgba($color_black, 0.3);
       }
       &:nth-child(n+5){ display: none; opacity: 0;}
     }
